--- a/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_HistoryHomePage/ZP_HistoryBetCell/ZP_HistoryBetCollectionCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_HistoryHomePage/ZP_HistoryBetCell/ZP_HistoryBetCollectionCell.xib
@@ -12,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ZP_HistoryBetCollectionCell">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eUl-mo-jv3">
-                        <rect key="frame" x="5" y="5" width="40" height="40"/>
+                        <rect key="frame" x="8" y="8" width="25" height="25"/>
                         <state key="normal" title="1" backgroundImage="bg_lottery_whiteball">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
@@ -32,10 +32,10 @@
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="eUl-mo-jv3" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="D5e-ev-ZxK"/>
-                <constraint firstItem="eUl-mo-jv3" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="RKH-1q-Wka"/>
-                <constraint firstItem="eUl-mo-jv3" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Rjz-cV-I7E"/>
-                <constraint firstItem="eUl-mo-jv3" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="xdN-jk-Unf"/>
+                <constraint firstItem="eUl-mo-jv3" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="0.5" id="D5e-ev-ZxK"/>
+                <constraint firstItem="eUl-mo-jv3" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="RKH-1q-Wka"/>
+                <constraint firstItem="eUl-mo-jv3" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" constant="0.5" id="Rjz-cV-I7E"/>
+                <constraint firstItem="eUl-mo-jv3" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="xdN-jk-Unf"/>
             </constraints>
             <connections>
                 <outlet property="countBut" destination="eUl-mo-jv3" id="4Pc-bR-U2m"/>
